<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="viki_real_estate"><b>VIKI</b> REAL ESTATE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_type_password">ReType Password</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="login">LogIn</string>
    <string name="new_account">New Account</string>
    <string name="request_new_account">Request new account</string>
    <string name="request_new_password">Request new password</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="register">Register</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="settings">Settings</string>
    <string name="password_is_required">Password is Required</string>
    <string name="confirm_password_is_required">Confirm Password is Required</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="password_requirement">Password must contain: one digit 0–9,one lowercase character, one uppercase character, length at least 6–20 characters</string>
    <string name="password_requirement_error">Not Valid Password</string>
    <string name="phone_nr_requirement_error">Not Valid Phone Nr</string>
    <string name="password_expire_token_error">"Token has been expired and is not valid anymore, Please Generate new One"</string>
</resources>