<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="auth"
            type="al.viki.authentication.auth.AuthenticationViewModel" />
        <import
            type="android.view.View"/>
        <import
            type="al.bruno.core.State"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{ auth.authentication instanceof State.Loading ? View.VISIBLE : View.GONE }"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{ auth.authentication instanceof State.Loading ? View.GONE : View.VISIBLE }"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/large_dimen">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_authentication_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viki_real_estate"
                    android:textSize="26sp"
                    android:layout_gravity="center_horizontal"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_large_dimen"
                    app:layout_constraintBottom_toTopOf="@+id/password_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:selectAllOnFocus="true"
                        android:text="@={auth.username}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_dimen"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/btn_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:text="@={auth.password}"
                        bind:onEditorEnterAction="@{ () -> auth.auth() }"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_request_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_new_password"
                    android:layout_gravity="end"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> auth.auth()}"
                    android:layout_marginTop="@dimen/xlarge_dimen"
                    android:layout_marginStart="@dimen/xlarge_dimen"
                    android:layout_marginEnd="@dimen/xlarge_dimen"
                    android:text="@string/login"
                    android:layout_gravity="center_horizontal" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_dimen"
                    android:layout_marginStart="@dimen/xlarge_dimen"
                    android:layout_marginEnd="@dimen/xlarge_dimen"
                    android:text="@string/request_new_account"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    style="@style/Widget.Material3.Button.OutlinedButton"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
