<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
        <variable
            name="passwordViewModel"
            type="al.viki.authentication.forgot.password.PasswordViewModel" />

        <import type="al.viki.foundation.ui.utils.ValidationKt"/>
        <import type="android.view.View"/>
        <import type="al.bruno.core.State"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/forgot_password_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/forgot_password_top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:navigationIcon="@drawable/ic_outline_close"
                app:title="@string/forgot_password" />
        </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{ passwordViewModel.reset instanceof State.Loading ? View.VISIBLE : View.GONE }"
            android:layout_gravity="center"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{ passwordViewModel.reset instanceof State.Loading ? View.GONE : View.VISIBLE }"
            android:layout_gravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="@dimen/large_dimen">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viki_real_estate"
                    android:textSize="26sp"
                    android:layout_gravity="center_horizontal"/>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extra_large_dimen"
                    app:error="@{ValidationKt.isValidEmail(passwordViewModel.email) ? @string/invalid_email : null}">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="auto"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:text="@={passwordViewModel.email}"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/xlarge_dimen"
                    android:layout_marginStart="@dimen/xlarge_dimen"
                    android:layout_marginEnd="@dimen/xlarge_dimen"
                    android:enabled="@{passwordViewModel.email != null &amp; !ValidationKt.isValidEmail(passwordViewModel.email)}"
                    android:onClick="@{(v) -> passwordViewModel.resetPassword()}"
                    android:text="@string/forgot_password"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>